--- a/docs/基础/排序/堆排序.md
+++ b/docs/基础/排序/堆排序.md
@@ -5,7 +5,9 @@
 **大顶堆堆顶最大，小顶堆堆顶最小**。
 
 * 在大顶堆中，任意节点 C 与它的父节点 P 符合 $P.value \geq C.value$
-* 而小顶堆中，任意节点 C 与它的父节点 P 符合 $P.value \leq C.value$
+* 而小顶堆中，任意节点 C 与它的父节点 P 符合 $P.value \leq C.value$​
+
+**而不能保证堆的左右子树是有序的**
 
 堆使用的是**完全二叉树**，特征：
 * 如果从索引 0 开始存储节点数据
@@ -15,15 +17,17 @@
 
 ## 建堆
 
-> 威廉姆斯算法
+> 威廉姆斯算法: O($n\log n$)
 
-$n*\log n$。n次循环 * logn的插入排序
+自上而下。n次循环 * logn的插入排序
 
-> Floyd
+> Floyd: O(n)
+
+自下而上。
 
 需要交换$2^h -h -1$次
 
-其中 $2^h \approx n$，$h \approx \log_2{n}$，因此有时间复杂度 $O(n)$
+其中 $2^h \approx n$，$h \approx \log_2{n}$，因此有时间复杂度 O(n)
 
 - 大顶堆：**“从最后一个非叶子结点(size/2 - 1)往0索引，对每个节点下潜  ”**
 - 小顶堆：**“从最后一个非叶子结点(size/2 - 1)往0索引，对每个节点上浮  ”**
@@ -119,9 +123,11 @@ public void up(int parent) {
 
 
 
-## 添加元素
+## 插入元素
 
 1. 添加元素的位置为arr[size+1]，它的parent = (size-1)/2
+
+   ​	肯定插入到末尾，不然替换堆顶到哪里去
 2. 上浮：添加元素从child索引开始，比较新值和parent的值，如果parent处小，则将parent赋值给child，更新child索引为parent，直到大了或 child==0 才退出循环，将child处填上新值。
 
 ## 弹出元素
@@ -146,21 +152,37 @@ public int poll(){
 
 # 堆排序
 
-1. 建大顶堆
+升序建立大顶堆（弹出到堆尾），降序是小顶堆。
 
-​	从最后一个非叶子结点(size/2 - 1)往0索引，对每个节点下潜 
+​	建大顶堆
 
-1. 出堆顶直到剩一个
+​		从最后一个非叶子结点(size/2 - 1)往0索引，对每个节点下潜 
 
-   ​	交换：交换堆顶和最后一个元素
+​	出堆顶直到剩一个
 
-   ​	size--：表示删除元素
+​		交换：交换堆顶和最后一个元素
 
-   ​	下潜：重新下潜堆顶
+​		size--：表示删除元素
 
-2. 得到升序数组。 
+​		下潜：重新下潜堆顶
+
+​	得到升序数组。 
 
 
+
+时间复杂度：O(nlogn)
+
+1. 建堆：威廉姆斯堆构建算法的时间复杂度为O(nlogn)，而Floyd堆构建算法的时间复杂度为O(n)。
+
+2. 调整堆：O(nlogn)。
+
+   ​	这个过程是把堆顶元素与堆的最后一个元素交换，然后把剩下的元素调整为一个新的堆。这个过程需要进行n-1次
+
+   ​	每次出dui的时间复杂度为O(logn)
+
+
+
+"那么在进行第一轮排序结束之后，数组的顺序为..."，这里指的第一轮是第一次出堆顶的结果。
 
 ```java
 // 912. 排序数组
@@ -241,6 +263,16 @@ q.peek();
 
 # 题
 
-[215. 数组中的第K个最大元素.md](..\..\题\leetcode\215. 数组中的第K个最大元素.md) 
+[215. 数组中的第K个最大元素.md](..\..\题\leetcode\215. 数组中的第K个最大元素.md) : 
+
+topK大的最优：维护小顶堆 nlogk
+
+topK小的最优：维护大顶堆 nlogk
+
+​	拿topK大来说，如果大顶堆，堆顶是最大值，那么就没有办法比较了。
+
+”从n个元素中查找最小的k个元素时，使用大顶堆的效率比使用小顶堆更高“。前者（维护k个元素的大顶堆）是 nlogk，后者（维护n个元素的小顶堆）是nlogn。
+
+
 
 [295. 数据流的中位数.md](..\..\题\leetcode\295. 数据流的中位数.md)  
