--- a/docs/题/leetcode/215. 数组中的第K个最大元素.md
+++ b/docs/题/leetcode/215. 数组中的第K个最大元素.md
@@ -135,9 +135,9 @@ class MinHeap {
 
 # 手小顶堆k: 不断更新
 
-但换一种省内存的做法：
+时间复杂度更低：nlogk
 
-- k个元素的大顶堆。
+- k个元素的小顶堆。
 - 如果大于堆顶，替换堆顶重新下潜（堆大小不变）。
 - 堆顶即topK。
 
