--- a/docs/基础/递归/递归.md
+++ b/docs/基础/递归/递归.md
@@ -1,12 +1,4 @@
-- [前后位置](#前后位置)
-- [类的成员变量什么都可以干](#类的成员变量什么都可以干)
-  - [代替函数参数中传递不变的参数](#代替函数参数中传递不变的参数)
-  - [代替函数参数中传递需要变化的参数](#代替函数参数中传递需要变化的参数)
-  - [返回值](#返回值)
-- [循环变递归](#循环变递归)
-- [记忆数组](#记忆数组)
-- [多路递归](#多路递归)
-- [多路递归→回溯](#多路递归回溯)
+[TOC]
 
 ---
 
