--- a/docs/题/leetcode/509. 斐波那契数列.md
+++ b/docs/题/leetcode/509. 斐波那契数列.md
@@ -1,40 +1,8 @@
-- [509.斐波那契数列](#509斐波那契数列)
-  - [普通递归](#普通递归)
-  - [记忆数组+递归](#记忆数组递归)
-  - [动态规划](#动态规划)
-- [题](#题)
-  - [兔子](#兔子)
-  - [爬楼梯](#爬楼梯)
+[TOC]
 
+# 509. 斐波那契数列
 
----
-## 509.斐波那契数列
-$$
-f(n) = 
-\begin{cases}
-0 & n=0 \\
-1 & n=1 \\
-f(n-1) + f(n-2) & n>1
-\end{cases}
-$$
-
-下面的表格列出了数列的前几项
-
-| *f*0 | *f*1 | *f*2 | *f*3 | *f*4 | *f*5 | *f*6 | *f*7 | *f*8 | *f*9 | *f*10 | *f*11 | *f*12 | *f*13 |
-| ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ---- | ----- | ----- | ----- | ----- |
-| 0    | 1    | 1    | 2    | 3    | 5    | 8    | 13   | 21   | 34   | 55    | 89    | 144   | 233   |
-
-> 递归的次数`2 * f(n+1) - 1`。
-
-> **时间复杂度**
-
-* 递归的次数也符合斐波那契规律，$2 * f(n+1)-1$
-* 时间复杂度推导过程
-  * 斐波那契通项公式 $f(n) = \frac{1}{\sqrt{5}}*({\frac{1+\sqrt{5}}{2}}^n - {\frac{1-\sqrt{5}}{2}}^n)$
-  * 简化为：$f(n) = \frac{1}{2.236}*({1.618}^n - {(-0.618)}^n)$
-  * 带入递归次数公式 $2*\frac{1}{2.236}*({1.618}^{n+1} - {(-0.618)}^{n+1})-1$
-  * 时间复杂度为 $\Theta(1.618^n)$
-### 普通递归
+## 普通递归
 ```java
 class Solution {
     public int fib(int n) {
@@ -42,18 +10,15 @@ class Solution {
     }
 
     public int rec(int n) {
-        if (n == 0) {
-            return 0;
-        }
-        if (n == 1) {
-            return 1;
+        if (n == 0 || n == 1) {
+            return n;
         }
         return rec(n - 1) + rec(n - 2);
     }
 }
 ```
 
-### 记忆数组+递归
+## 记忆数组+递归
 
 两种方式：一种在递归外面填充边界条件，另一种在递归内作为边界条件填充数组。
 ```java
@@ -62,6 +27,7 @@ class Solution {
         if (n <= 1) {
             return n;
         }
+        // 因为0，多一个
         int[] cache = new int[n + 1];
         Arrays.fill(cache, -1);
         cache[0] = 0;
@@ -102,9 +68,12 @@ class Solution {
 }
 ```
 
-### 动态规划
+## 动态规划
 
 动态规划，区别于递归版，就是可能会涉及无用计算。
+
+但是结果却是动态规划不会超时！！ [70. 爬楼梯.md](70. 爬楼梯.md) 
+
 ```java
 class Solution {
     public int fib(int n) {
@@ -173,20 +142,3 @@ class Solution {
     }
 }
 ```
-
-
-## 题
-
-### 兔子
-
-![alt text](../../../../../../../images/image-26.png)
-
-上个月的兔子 + 上个月成熟的兔子生的兔子 = 上个月的兔子 + 上个月成熟的兔子 = 上个月的兔子 + 上上个月的兔子。
-
-### 爬楼梯
-
-![alt text](../../../../../../../images/image-27.png)
-
-按跳1个和跳2个到第4台阶算→2阶、3阶。
-
-因此本质上还是斐波那契数列，只是从其第二项开始f(2)
