--- a/docs/基础/树/计算题.md
+++ b/docs/基础/树/计算题.md
@@ -30,21 +30,7 @@
 
 一个高度为 8 的高度**平衡二叉树**至少有几个节点？54
 
-​	使用递推的思想:
-
-​	P(N)=N层平衡二叉树的最少节点数
-
-​	那么P(N)=P(N-1)+P(N-2)+1
-
-​	P(1)=1 
-
-​	P(2)=2
-
-​	P(3)=P(1)+P(2)+1=4
-
-​	...............................
-
-​	P(8)=P(6)+P(7)+1=20+33+1=54
+![image-20240622103636180](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406221036236.png)
 
 
 
