--- a/docs/基础/栈和队列/计算题.md
+++ b/docs/基础/栈和队列/计算题.md
@@ -1,1 +1,9 @@
 不同的出栈顺序有几个？Catalan数， [Catalan数.md](..\动态规划\Catalan数.md) 
+
+
+
+用俩个栈模拟实现一个队列，如果栈的容量分别是O和P(O>P),那么模拟实现的队列最大容量是多少？2P+1
+
+​	最后p和o全部出栈，不能有p+1在p前面的情况，必须保证先进先出，所以p全部出栈时是1、2...p，o比p大，我们暂且存p+1个就是从p+1...2p+1，出栈后放入p中，只能放2p+1...p+2，此时o中还剩个p+1，现在我们已经得到1..p，再将o中的p+1出栈，再将之前o压到p中的元素出栈，可以得到1...2p+1；如果o中再多存一个，存到2p+2的话，那最后o中就会剩p+2和p+1，出栈的时候p+2在p+1前面，不符合队列的先进先出了，所以最多只能到2p+1
+
+​	![image-20240622113858345](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406221138384.png)
