--- a/docs/基础/栈和队列/队列.md
+++ b/docs/基础/栈和队列/队列.md
@@ -1,44 +1,58 @@
 
-# 环形数组
+# 环形数组 / 循环队列
 
-- 有size属性：
-  
-    可以占满
-- head、tail是索引：
+## rear留空
 
-    不可以占满
-    
-    head和tail是索引值，不可用占满，留给tail当空，因为`head == tail`无法区分满和空。
-- head、tail自增
-  
-    array索引时取模：可以占满
+**front表示队头元素的位置，rear表示队尾元素的下一个位置（待填充的空位）**：[front, rear)
+
+**但不可以占满**
+
+大小：`(rear - front + n) % n`
+
+空：`front == rear`，队头是空位
+
+满：`(rear + 1) % n == front`，最后一个位置不能添加。
+
+​	[1...2]，1和2都有东西，那么2-1+1=2
+
+​	[1...2)，1有东西，2没东西，那么2-1=1
+
+![image-20240622125259672](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406221252728.png)
+
+## 有size属性
+
+[front, rear]
+
+可以占满
+
+大小：`size`
+
+空：`size == 0`
+
+满：`size == n`
+
+## rear留空 + front和rear自增（未经验证）
+
+可以占满
+
+大小：`rear - front`
+
+空：`front == rear`或者`front - rear == 0`
+
+满：`(rear - front) == n`
 
 共同：
 - 获取索引：
   
-    `array[(head + i) % array.length]`。即头`array[head % array.length]`、尾`array[(tail - 1) % array.length]`
+    `array[(front + i) % n]`。即头`array[front % n]`、尾`array[(rear - 1) % n]`
 
 区别：
-- 创建：
-  
-    有size属性和head、tail自增，都可以占满数组`new Object[capacity]`；head、tail是索引，不可以占满数组`new Object[capacity+1]`。
-
-- 大小：
-  
-    `size`；`(tail - head + array.length) % array.length`；`tail - head`
-- 空：
-  
-    `size == 0`；`head == tail`；`head == tail`或者`head - tail == 0`
-- 满：
-  
-    `size == array.length`；`(tail + 1) % array.length == head`；`(tail - head) == array.length`
-
 
 - 入队、出队: 
   
-    直接索引、tail自增取模更新、size++
+    直接索引、rear自增取模更新、size++
 
-    直接索引、tail自增取模更新
+    直接索引、rear自增取模更新
 
-    tail取模转化索引、tail自增
+    rear取模转化索引、rear自增
 
