--- a/docs/基础/二分查找.md
+++ b/docs/基础/二分查找.md
@@ -71,7 +71,7 @@ class Solution {
 返回的是最左侧的重复元素 / 返回的是最右侧的重复元素，没找到则返回-1.
 
 leftmost：本来中间索引m处找到了，但是还往左找（移动j向左 `j = m - 1`）
-  
+
 ```java
 /**
  * <h3>二分查找 Leftmost </h3>
@@ -202,6 +202,12 @@ public static int recursion(int[] a, int target, int i, int j){
     }
 }
 ```
+
+# 时间复杂度
+
+12个元素的排序数组进行二分查找，每个元素被查找的概率是想等的，则平均比较次数是？
+
+​	
 
 ## leetcode
 #### 35. 搜索插入位置
