--- a/docs/基础/排序/快速排序.md
+++ b/docs/基础/排序/快速排序.md
@@ -49,11 +49,23 @@ class Solution {
 }
 ```
 
-# Lomuto
+# 时间复杂度
+
+最好、平均：O(n logn)。
+
+​	每轮都是一分为二，那么轮数是logn。
+
+最坏：O(n^2)
+
+​	倒序数组。那么每轮哨兵划分操作都将长度为 k 的数组划分为长度 1 和 k−1 两个子数组。那么轮数是 n
+
+# 其他
+
+## Lomuto
 
 [算法学习之：Lomuto 分区算法 + 快速排序算法_lomuto算法-CSDN博客](https://blog.csdn.net/qq_42902997/article/details/115773598)
 
-# 双边 j 先
+## 双边 j 先
 
 * 选择最左侧元素作为基准点
 * j 找比基准点**小于等于**的，i 找比基准点**大于的**，一旦找到，二者进行交换
@@ -82,7 +94,7 @@ public int partition(int[] nums, int left, int right) {
 }
 ```
 
-# 双边 i 先：唯一能通过的912的
+## 双边 i 先：唯一能通过的912的
 
 ```java
 // 双边 i 先
@@ -107,3 +119,7 @@ public int partition(int[] nums, int left, int right) {
     return j;
 }
 ```
+
+## 随机哨兵
+
+[「排序算法」快速排序 - 力扣（LeetCode）](https://leetcode.cn/circle/discuss/kiHnKs/)
