--- a/docs/题/leetcode/20括号栈.md
+++ b/docs/题/leetcode/20括号栈.md
@@ -44,33 +44,33 @@ class Solution {
 - 如果是右边，弹栈顶比较当前字符不是、或空栈，直接匹配失败。
 - 最后，解决只入左边的情况。
 ```java
+// 20. 有效的括号
 class Solution {
     public boolean isValid(String s) {
-        char[] chars = s.toCharArray();
-        Stack<Character> stack = new Stack<>();
-        for (char c : chars) {
+        char[] cs = s.toCharArray();
+        LinkedList<Character> stack = new LinkedList<>();
+        for (char c : cs) {
             switch (c) {
-                case '(':
+                case '(': {
                     stack.push(')');
                     break;
-                case '[':
+                }
+                case '[': {
                     stack.push(']');
                     break;
-
-                case '{':
+                }
+                case '{': {
                     stack.push('}');
                     break;
-                default:
-                    if (stack.empty() || c != stack.pop()) {
+                }
+                default: {
+                    if (stack.isEmpty() || c != stack.pop()) {
                         return false;
                     }
+                }
             }
         }
-        if (stack.empty())
-        {
-            return true;
-        }
-        return false;
+        return stack.isEmpty();
     }
 }
 ```
