--- a/docs/题/leetcode/101.对称二叉树.md
+++ b/docs/题/leetcode/101.对称二叉树.md
@@ -26,31 +26,28 @@
 
 ```java
 class Solution {
-    public boolean isSymmetric(TreeNode root) {
-        if (root != null) {
-            return judge(root.left, root.right);
-        } else {
+  	public boolean isSymmetric (TreeNode root) {
+        if(root == null || root.left == root.right){
             return true;
         }
+        return sym(root.left, root.right);
     }
-
-    public boolean judge(TreeNode left, TreeNode right) {
+    
+    public boolean sym(TreeNode left, TreeNode right){
         // 都空
-        if (left == null && right == null) {
+        if(left == null && right == null){
             return true;
         }
         // 有一个非空，另一个空
-        else if (left == null || right == null) {
+        else if(left == null || right == null){
             return false;
         }
         // 都非空，看值
-        else if (left.val == right.val) {
-            return judge(left.left, right.right) && judge(left.right, right.left);
-        } 
-        // 不空，值不等
-        else {
-            return false;
+        else if(left.val == right.val){
+            return sym(left.left, right.right) && sym(left.right, right.left);
         }
+        // 不空，值不等
+        return false;
     }
 }
 ```
