--- a/docs/高级/前缀和/01-一维前缀和.md
+++ b/docs/高级/前缀和/01-一维前缀和.md
@@ -1,20 +1,18 @@
-## 一维
+# 前缀和
 
-> 前缀和
+对于数组 $nums$，定义它的前缀和 $sums$
 
-对于数组 nums，定义它的前缀和 
+- $sums[0]=0$
 
-- $nums[0]=0$
+- $sums[i+1] = \sum\limits_{j=0}^{i}\textit{nums}[j]$。
 
-- $nums[i+1] = \sum\limits_{j=0}^{i}\textit{nums}[j]$。
+根据这个定义，有 $sums[i+1]=sums[i]+nums[i]$
 
-根据这个定义，有 sums[i+1]=sums[i]+nums[i]
-
-例如 nums=[1,2,1,2]，对应的前缀和数组为 sums=[0,1,3,4,6]。
+> 例如 nums=[1,2,1,2]，对应的前缀和数组为 sums=[0,1,3,4,6]。
 
 sums[i]表示[0...i-1]的子数组的和，sums[0]=0 表示一个空数组的元素和。
 
-> 前缀和之差
+# 前缀和之差
 
 把子数组的元素和转换成两个前缀和的差，即
 
@@ -22,28 +20,6 @@ sums[i]表示[0...i-1]的子数组的和，sums[0]=0 表示一个空数组的元
 
 $$\displaystyle \sum_{j=left}^{right}\textit{nums}[j] = sums[right+1] - sums[left] = \sum\limits_{j=0}^{right} \textit{nums}[j] - \sum\limits_{j=0}^{left-1}\textit{nums}[j] $$
 
-
-问：为什么要定义 sums[0]=0，这样做有什么好处？
+> 问：为什么要定义 sums[0]=0，这样做有什么好处？
 
 答：如果要计算的子数组是`[0...j]`，那么就是sums[j+1]-sums[0]。如果不定义 sums[0]=0，就必须特判 left=0 的情况了。
-
-```java
-// 303. 区域和检索 - 数组不可变
-class NumArray {
-    int[] sums;
-
-	public NumArray(int[] nums) {
-        sums = new int[nums.length + 1];
-        sums[0] = 0;
-        for (int i = 0; i < nums.length; i++) {
-            sums[i + 1] = sums[i] + nums[i];
-        }
-    }
-
-    public int sumRange(int left, int right) {
-        return sums[right + 1] - sums[left];
-    }
-}
-```
-
-​	
