--- a/docs/基础/二分查找.md
+++ b/docs/基础/二分查找.md
@@ -1,16 +1,4 @@
-- [1. 重要](#1-重要)
-  - [1.1. 基础版：ij都查](#11-基础版ij都查)
-  - [1.2. Leftmost 与 Rightmost的-1版本](#12-leftmost-与-rightmost的-1版本)
-  - [1.3. Leftmost 与 Rightmost 的i/i-1版](#13-leftmost-与-rightmost-的ii-1版)
-  - [1.4. 递归版](#14-递归版)
-- [leetcode](#leetcode)
-    - [35. 搜索插入位置](#35-搜索插入位置)
-    - [278. 第一个错误的版本](#278-第一个错误的版本)
-    - [34. 在排序数组中查找元素的第一个和最后一个位置](#34-在排序数组中查找元素的第一个和最后一个位置)
-    - [leftmost i](#leftmost-i)
-
----
-## 1. 重要
+## 重要
 
 首先，要求数组有序。
 
@@ -40,7 +28,7 @@
     - leftmost：大于等于的最左 `target <= a[m]`, i
     - rightmost：小于等于的最右 `a[m] <= target`，i-1
 
-### 1.1. 基础版：ij都查 
+### 基础版：ij都查 
 
 元素在最左边 L 次， 元素在最右边 2L 次
 ```java
@@ -66,7 +54,7 @@ class Solution {
 }
 ```
 
-### 1.2. Leftmost 与 Rightmost的-1版本
+### Leftmost 与 Rightmost的-1版本
 
 返回的是最左侧的重复元素 / 返回的是最右侧的重复元素，没找到则返回-1.
 
@@ -118,7 +106,7 @@ public static int binarySearchRightmost(int[] a, int target) {
     return candidate;
 }
 ```
-### 1.3. Leftmost 与 Rightmost 的i/i-1版
+### Leftmost 与 Rightmost 的i/i-1版
 
 如果没找到，可以返回一个比 -1 更有用的索引。
 
@@ -171,7 +159,7 @@ public static int binarySearchRightmostUseful(int[] a, int target) {
 
 `<=` 是 `(>x) - 1` 即 `(>= x+1) -1`
 
-### 1.4. 递归版
+### 递归版
 
 拆解 while 循环。
 
@@ -203,14 +191,19 @@ public static int recursion(int[] a, int target, int i, int j){
 }
 ```
 
-# 时间复杂度
+## 时间复杂度
 
-12个元素的排序数组进行二分查找，每个元素被查找的概率是想等的，则平均比较次数是？
+二叉搜索树的查找操作与二分查找算法的工作原理一致，都是每轮排除一半情况。循环次数最多为二叉树的高度，当二叉树平衡时，使用 𝑂(log⁡𝑛) 时间
 
-​	
+
+
+12个元素的排序数组进行二分查找，每个元素被查找的概率是相等的，则平均比较次数是？37/12
+
+​	$查找次数/元素个数=1*1+2*2+3*4+4*5$。画一个二叉树，第i层就要比较ici
 
 ## leetcode
-#### 35. 搜索插入位置
+
+### 搜索插入位置
 基础版
 ```java
 class Solution {
@@ -230,7 +223,7 @@ class Solution {
     }
 }
 ```
-#### 278. 第一个错误的版本
+### 第一个错误的版本
 leftmost -1版
 ```java
 // 278. 第一个错误的版本
@@ -252,7 +245,7 @@ public class Solution extends VersionControl {
 }
 ```
 
-#### 34. 在排序数组中查找元素的第一个和最后一个位置
+### 在排序数组中查找元素的第一个和最后一个位置
 
 leftmost rightmost -1版
 ```java
@@ -324,6 +317,6 @@ class Solution {
 }
 ```
 
-#### leftmost i
+### leftmost i
 
 可用 34 题测试
