--- a/docs/基础/图/存图方式.md
+++ b/docs/基础/图/存图方式.md
@@ -26,7 +26,9 @@ int[][] w = new int[N][N];
 自身是0，有权是c，不连接是
 - 0：权非0的普通情况
 - -1：有些题的权是0，那么就得区分不连接和自身
-- INF：Dijkstra的不连接是INF，那么可以不判断相邻。
+- INF: Dijkstra的不连接是INF，那么可以不判断相邻。
+
+[9.2  图基础操作 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_graph/graph_operations/#921)
 
 ## 1.3. 链式 前向星
 
@@ -73,6 +75,22 @@ for (int i = he[cur]; i != 0; i = ne[i]) {
 
 ![在这里插入图片描述](https://img-blog.csdnimg.cn/2019080616513495.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2Rhb2Nhb3Jlbl8=,size_16,color_FFFFFF,t_70)
 
-邻接表和邻接矩阵的区别就是：前者存权重，后者只记录是否有边。for循环找到边节点快。
+邻接表的链表，其中存储了各顶点的与各自相连的邻接顶点。
+
+
+
+邻接表和邻接矩阵的区别就是：
+
+​	邻接矩阵存权重，邻接表只记录是否有边。
+
+​	邻接矩阵for循环找到边节点快，但空间O(n^2)
+
+​	邻接表仅存储实际存在的边，而边的总数通常远小于 𝑛2 ，因此它更加节省空间。
+
+
+
+比如当链表较长时，可以将链表转化为 AVL 树或红黑树，从而将时间效率从 𝑂(𝑛) 优化至 𝑂(log⁡𝑛) ；还可以把链表转换为哈希表，从而将时间复杂度降至 𝑂(1) 。
+
+[9.2  图基础操作 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_graph/graph_operations/#922)
 
  [207. 课程表.md](..\..\题\leetcode\207. 课程表.md) 
