--- a/docs/基础/排序/堆排序.md
+++ b/docs/基础/排序/堆排序.md
@@ -1,84 +1,183 @@
-# 堆
+## 堆
 
-## 基本概念
+### 基本概念
 
-**大顶堆堆顶最大，小顶堆堆顶最小**。
+**大顶堆堆顶最大，小顶堆堆顶最小**。**而不能保证堆的左右子树是有序的**
 
-* 在大顶堆中，任意节点 C 与它的父节点 P 符合 $P.value \geq C.value$
-* 而小顶堆中，任意节点 C 与它的父节点 P 符合 $P.value \leq C.value$​
+* 在大顶堆中，任意父节点的值 > 子节点的值
+* 而小顶堆中，任意父节点的值 < 子节点的值
 
-**而不能保证堆的左右子树是有序的**
 
-堆使用的是**完全二叉树**，特征：
-* 如果从索引 0 开始存储节点数据
-  * 节点 $i$ 的父节点为 $\lfloor((i-1)/2)\rfloor$
-  * 节点 $i$ 的左子节点为 $2i+1$，右子节点为 $2i+2$
-  * 非叶子节点范围为 $[0, size/2-1]$​
 
-## 建堆
+堆使用的是**完全二叉树**（从索引 0 开始存储节点数据）
+* 节点 $i$ 的左子节点为 $2i+1$，右子节点为 $2i+2$。根节点0，左右子节点1和2，2i必有，直接+1、+2
 
-> 威廉姆斯算法: O($n\log n$)
+* 节点 $i$ 的父节点为 $(i-1)/2$ 向下取整。 
 
-自上而下。n次循环 * logn的插入排序
+  ​	左子节点 2i+1，直接$[(2i+1)-1/2]=i$
+  ​	右子节点 2i+2，直接(2i+2)-1，变成i+0.5，取整会自然舍弃0.5。
 
-> Floyd: O(n)
+* 非叶子节点范围为 $[0, size/2-1]$
 
-自下而上。
+  ​	最后一个（叶）节点的父节点，即为最后一个非叶子节点。
 
-需要交换$2^h -h -1$次
+  ​	最后节点的下标i，则父节点为 (i-1)/2。
 
-其中 $2^h \approx n$，$h \approx \log_2{n}$，因此有时间复杂度 O(n)
+  ​	i = size -1，则(size-1-1)/2 = size/2-1
 
-- 大顶堆：**“从最后一个非叶子结点(size/2 - 1)往0索引，对每个节点下潜  ”**
-- 小顶堆：**“从最后一个非叶子结点(size/2 - 1)往0索引，对每个节点上浮  ”**
+![不重要](https://www.hello-algo.com/chapter_heap/heap.assets/min_heap_and_max_heap.png)
+
+### 建堆
+
+#### 威廉姆斯算法: 上浮
+
+O($n\log n$)
+
+自上而下。n次循环 * logn的插入上浮
 
 ```java
-public void buildMaxHeap() {
-    for (int i = size / 2 - 1; i >= 0; i--) {
-        down(i);
+// 215. 数组中的第K个最大元素
+class Solution {
+    public int findKthLargest(int[] nums, int k) {
+        MaxHeap heap = new MaxHeap(nums.length);
+        for(int num: nums){
+            heap.offer(num);
+        }
     }
-}
-public void buildMinHeap() {
-    for (int i = size / 2 - 1; i >= 0; i--) {
-        up(i);
+
+    static class MaxHeap {
+        public int[] nums;
+        public int size;
+
+        public MaxHeap(int capacity) {
+            nums = new int[capacity];
+        }
+
+        public void offer(int num) {
+            nums[size] = num;
+            up(size);
+            size++;
+        }
+
+        private void up(int child){
+            int parent = (child - 1 ) / 2;
+            if(parent >= 0 && nums[parent] < nums[child]){
+                swap(child, parent);
+                up(parent);
+            }
+        }
+
+        private void swap(int i, int j) {
+            int temp = nums[i];
+            nums[i] = nums[j];
+            nums[j] = temp;
+        }
     }
 }
 ```
 
 
 
-## 下潜
+#### Floyd: 下潜
 
-1. parent自身和左右孩子left,right，选出最大值的索引为max
+O(n)
 
-2. 如果max为孩子，那么
+自下而上。从最后一个非叶子结点(size/2 - 1)往0索引，对每个节点下潜
 
-   ​	交换parent和max处的元素
+时间复杂度 O(n)
 
-   ​	以max为parent**递归**再下潜。
+​	需要交换$2^h -h -1$次([8.2  建堆操作 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_heap/build_heap/#823))，其中 $2^h \approx n$，$h \approx \log_2{n}$
+
+
+```java
+// 215. 数组中的第K个最大元素
+class Solution {
+    public int findKthLargest(int[] nums, int k) {
+        MaxHeap heap = new MaxHeap(nums);
+    }
+
+    static class MaxHeap {
+        public int[] nums;
+        public int size;
+
+        public MaxHeap(int[] nums) {
+            this.nums = nums;
+            this.size = nums.length;
+            buildHeap();
+        }
+
+        private void buildHeap() {
+            for (int i = size / 2 - 1; i >= 0; i--) {
+                down(i);
+            }
+        }
+
+        private void down(int parent) {
+            int left = 2 * parent + 1;
+            int right = left + 1;
+            int max = parent;
+            if (left < size && nums[left] > nums[max]) {
+                max = left;
+            }
+            if (right < size && nums[right] > nums[max]) {
+                max = right;
+            }
+            if (max != parent) {
+                swap(max, parent);
+                down(max);
+            }
+        }
+
+        private void swap(int i, int j) {
+            int temp = nums[i];
+            nums[i] = nums[j];
+            nums[j] = temp;
+        }
+    }
+}
+```
+
+### 大小顶堆
+
+小顶堆，只需要改down、up 的规则。建堆、出堆、入堆不变。
+
+​	max换个名字min
+
+​	 `nums[left] < nums[min]` , 	 `nums[right] < nums[min]` 
+
+### 下潜 down
+
+建堆Floyd
+
+弹出元素 poll
 
 ```java
 // 递归
-public void down(int parent) {
+private void down(int parent) {
+    // parent自身和左右孩子left,right
     int left = parent * 2 + 1;
     int right = left + 1;
     int max = parent;
+    // 选出最大值的索引为max, 因为是下潜所以递归边界是 < size
     if (left < size && nums[left] > nums[max]) {
         max = left;
     }
     if (right < size && nums[right] > nums[max]) {
         max = right;
     }
+    
+    // 如果max为孩子，才交换，继续递归
     if (max != parent) {
         swap(max, parent);
-        down(max);
+        // 是递归孩子
+        down(max);		
     }
 }
 ```
 
 ```java
 // 循环
-public void down(int parent) {
+private void down(int parent) {
     while (true) {
         int left = parent * 2 + 1;
         int right = left + 1;
@@ -99,66 +198,70 @@ public void down(int parent) {
 }
 ```
 
-## 上浮
+### 上浮 up
 
-就是 `nums[left] < nums[max]` 
+建堆威廉姆斯算法
+
+插入元素 offer
 
 ```java
-public void up(int parent) {
-    int left = parent * 2 + 1;
-    int right = left + 1;
-    int min = parent;
-    if (left < size && nums[left] < nums[min]) {
-        min = left;
-    }
-    if (right < size && nums[right] < nums[min]) {
-        min = right;
-    }
-    if (min != parent) {
-        swap(min, parent);
-        up(min);
+private void up(int child){
+    int parent = (child - 1 ) / 2;
+    if(parent >= 0 && nums[parent] < nums[child]){
+        swap(child, parent);
+        up(parent);
     }
 }
 ```
 
+### 插入元素 offer
 
-
-## 插入元素
-
-1. 添加元素的位置为arr[size+1]，它的parent = (size-1)/2
+1. 添加元素的位置为`nums[size]`
 
    ​	肯定插入到末尾，不然替换堆顶到哪里去
-2. 上浮：添加元素从child索引开始，比较新值和parent的值，如果parent处小，则将parent赋值给child，更新child索引为parent，直到大了或 child==0 才退出循环，将child处填上新值。
 
-## 弹出元素
+2. 上浮
 
-交换：交换堆顶和最后一个元素
-
-size--：表示删除元素
-
-下潜：重新下潜/上浮堆顶
+   ​	**需要修复从插入节点到根节点的路径上的各个节点**
 
 ```java
-public int poll(){
-    int top = nums[0];
-    swap(0, size - 1);
-    size--;
-    down(0);
-    return top;
+public void offer(int num) {
+    nums[size] = num;
+    up(size);
+    size++;
 }
 ```
 
+### 弹出元素 poll
 
+```java
+public int poll() {
+    int peek = nums[0];		// 记录堆顶
+    
+    // (1)交换：交换堆顶和最后一个元素
+    swap(0, size - 1);
+    // (2)size--：表示删除元素
+    size--;
+    // (3)下潜：重新下潜堆顶 
+    down(0);
+    
+    return peek;
+}
+```
 
-# 堆排序
+## 堆排序
 
 升序建立大顶堆（弹出到堆尾），降序是小顶堆。
 
-​	建大顶堆
+
+
+过程：
+
+​	（1）建大顶堆
 
 ​		从最后一个非叶子结点(size/2 - 1)往0索引，对每个节点下潜 
 
-​	出堆顶直到剩一个
+​	（2）出堆顶直到剩一个
 
 ​		交换：交换堆顶和最后一个元素
 
@@ -166,86 +269,91 @@ public int poll(){
 
 ​		下潜：重新下潜堆顶
 
-​	得到升序数组。 
+​	（3）得到升序数组。 
 
 
 
 时间复杂度：O(nlogn)
 
-1. 建堆：威廉姆斯堆构建算法的时间复杂度为O(nlogn)，而Floyd堆构建算法的时间复杂度为O(n)。
+1. 建堆：Floyd堆构建算法的时间复杂度为O(n)。(威廉姆斯堆构建算法的时间复杂度为O(nlogn))
 
 2. 调整堆：O(nlogn)。
 
    ​	这个过程是把堆顶元素与堆的最后一个元素交换，然后把剩下的元素调整为一个新的堆。这个过程需要进行n-1次
 
-   ​	每次出dui的时间复杂度为O(logn)
-
-
-
-"那么在进行第一轮排序结束之后，数组的顺序为..."，这里指的第一轮是第一次出堆顶的结果。
+   ​	每次出堆的时间复杂度为O(logn)
 
 ```java
 // 912. 排序数组
 class Solution {
     public int[] sortArray(int[] nums) {
-        MaxHeap maxHeap = new MaxHeap(nums);
-        while (maxHeap.size > 1) {
-            maxHeap.poll();
+        MaxHeap heap = new MaxHeap(nums);
+        for(int i= 0; i < nums.length - 1; i++){
+            heap.poll();
         }
         return nums;
     }
 
-}
+    static class MaxHeap {
+        public int[] nums;
+        public int size;
 
-class MaxHeap {
-    public int[] nums;
-    public int size;
-
-    public MaxHeap(int[] nums) {
-        this.nums = nums;
-        size = nums.length;
-        buildMaxHeap();
-    }
-
-    public void buildMaxHeap() {
-        for (int i = size / 2 - 1; i >= 0; i--) {
-            down(i);
+        public MaxHeap(int[] nums) {
+            this.nums = nums;
+            this.size = nums.length;
+            buildHeap();
         }
-    }
 
-    public void down(int parent) {
-        int left = parent * 2 + 1;
-        int right = left + 1;
-        int max = parent;
-        if (left < size && nums[left] > nums[max]) {
-            max = left;
+        public int poll() {
+            int peek = nums[0];
+            swap(0, size - 1);
+            size--;
+            down(0);
+            return peek;
         }
-        if (right < size && nums[right] > nums[max]) {
-            max = right;
-        }
-        if (max != parent) {
-            swap(max, parent);
-            down(max);
-        }
-    }
-    
-    public int poll(){
-        int top = nums[0];
-        swap(0, size - 1);
-        size--;
-        down(0);
-        return top;
-    }
 
-    public void swap(int p, int q) {
-        int t = nums[p];
-        nums[p] = nums[q];
-        nums[q] = t;
+        private void buildHeap() {
+            for (int i = size / 2 - 1; i >= 0; i--) {
+                down(i);
+            }
+        }
+
+        private void down(int parent) {
+            int left = 2 * parent + 1;
+            int right = left + 1;
+            int max = parent;
+            if (left < size && nums[left] > nums[max]) {
+                max = left;
+            }
+            if (right < size && nums[right] > nums[max]) {
+                max = right;
+            }
+            if (max != parent) {
+                swap(max, parent);
+                down(max);
+            }
+        }
+
+        private void swap(int i, int j) {
+            int temp = nums[i];
+            nums[i] = nums[j];
+            nums[j] = temp;
+        }
     }
 }
 ```
 
-# PriorityQueue
+## 时间复杂度
+
+建堆：Floyd O(n), 威廉姆斯算法 O(nlogn)
+
+入堆和出堆操作的时间复杂度均为 𝑂(log⁡𝑛) 
+
+堆排序: O(nlogn)
+
+## PriorityQueue
+
+堆通常用于实现优先队列，大顶堆相当于元素按从大到小的顺序出队的优先队列
 
 ```java
 // 默认就是小顶堆
@@ -253,25 +361,32 @@ PriorityQueue<Integer> q = new PriorityQueue<>();
 // 大顶堆
 PriorityQueue<Integer> q = new PriorityQueue<>((a, b) -> b - a);
 
-q.add(nums[i]);
+q.offer(nums[i]);
 int size = q.size();
-q.poll();
-q.peek();
+int peek = q.peek();
+int poll = q.poll();
+boolean isEmpty = maxHeap.isEmpty();
 ```
 
 
 
-# 题
+## 题
 
 [215. 数组中的第K个最大元素.md](..\..\题\leetcode\215. 数组中的第K个最大元素.md) : 
+
+都是替换堆顶。
 
 topK大的最优：维护小顶堆 nlogk
 
 topK小的最优：维护大顶堆 nlogk
 
-​	拿topK大来说，如果大顶堆，堆顶是最大值，那么就没有办法比较了。
+​	**堆顶元素是最大最小，但堆底部的左右顺序无法控制**。
 
-”从n个元素中查找最小的k个元素时，使用大顶堆的效率比使用小顶堆更高“。前者（维护k个元素的大顶堆）是 nlogk，后者（维护n个元素的小顶堆）是nlogn。
+​	拿topK大来说。所以如果大顶堆，堆顶是最大值，我们无法堆底的topk。所以只能用小顶堆，堆顶就是topk大。
+
+​	拿topK小来说。所以如果小顶堆，堆顶是最小值，我们无法堆底的topk。所以只能用大顶堆，堆顶就是topk小。
+
+​	从n个元素中查找最小的k个元素时，使用大顶堆的效率比使用小顶堆更高“。前者（维护k个元素的大顶堆）是 nlogk，后者（维护n个元素的小顶堆）是nlogn。
 
 
 
