--- a/docs/基础/树/遍历/层序遍历.md
+++ b/docs/基础/树/遍历/层序遍历.md
@@ -1,7 +1,7 @@
 https://leetcode.cn/problems/binary-tree-level-order-traversal/solutions/244853/bfs-de-shi-yong-chang-jing-zong-jie-ceng-xu-bian-l/
 
 
-# 1. 不分层结果
+## 不分层结果
 出队时打印。
 ```java
 List<Integer> result = new ArrayList<>();
@@ -23,7 +23,7 @@ while(!q.isEmpty()){
 }
 return result;
 ```
-# 2. 分层结果
+## 分层结果
 
 层序遍历顺序和 BFS 是一样的，我们可以直接用 BFS 得出层序遍历结果。然而，层序遍历要求的输入结果和 BFS 是不同的。层序遍历要求我们区分每一层，也就是返回一个二维数组。而 BFS 的遍历结果是一个一维数组，无法区分每一层。
 
@@ -47,9 +47,9 @@ return result;
 
 **遍历本层、出队本层、入队下层**。
 
-## 2.1. 入队时记录
+### 入队时记录下层
 
-**遍历本层、出队本层、入队下层** + 记录在下层。
+**遍历本层、出队本层、入队下层** + 记录下层。
 
 - 左右子结点也要分开写记录。
 - 处理最后一层叶子结点时，入队是空，记录也是[]，所以最后要判断level.size，要不然就会出现`[[3],[9,20],[15,7],[]]`，多了一个`[]`。
@@ -91,9 +91,9 @@ class Solution {
 }
 ```
 
-## 2.2. 🚀出队时记录
+### 🚀出队时记录本层
 
-**遍历本层、出队本层、入队下层** + 记录在本层。
+**遍历本层、出队本层、入队下层** + 记录本层。
 
 - 不会出现最后一层为空的情况。
 ```cpp
@@ -126,7 +126,7 @@ class Solution {
     }
 }
 ```
-# 题
+## 题
 
  [103. 二叉树的锯齿形层序遍历.md](..\..\..\题\leetcode\103. 二叉树的锯齿形层序遍历.md) : 出队时记录，记录level的方式不同。
 
