--- a/docs/背/八股/八股.md
+++ b/docs/背/八股/八股.md
@@ -51,5 +51,10 @@
 
 **相同元素**被排序后，**保持原有数组中的相对顺序不变**。
 
+## 排序优化
+
+内置排序函数的时间复杂度是 𝑂(𝑛log⁡𝑛) ；
 
 
+
+如果给定的数据是**固定位数的整数**（例如学号），那么我们就可以用效率更高的“**基数排序**”来做，将时间复杂度降为 𝑂(𝑛𝑘) ，其中 𝑘 为位数。
