--- a/docs/题/leetcode/215. 数组中的第K个最大元素.md
+++ b/docs/题/leetcode/215. 数组中的第K个最大元素.md
@@ -16,58 +16,58 @@
 // 215. 数组中的第K个最大元素
 class Solution {
     public int findKthLargest(int[] nums, int k) {
-        MaxHeap maxHeap = new MaxHeap(nums);
-        for(int i = 0; i < k - 1; i++){
-            maxHeap.poll();
+        MaxHeap heap = new MaxHeap(nums);
+        for (int i = 0; i < k - 1; i++) {
+            heap.poll();
         }
-        return maxHeap.nums[0];
-    }
-}
-
-class MaxHeap {
-    public int[] nums;
-    public int size;
-
-    public MaxHeap(int[] nums) {
-        this.nums = nums;
-        size = nums.length;
-        buildMaxHeap();
+        return heap.nums[0];
     }
 
-    public void buildMaxHeap() {
-        for (int i = size / 2 - 1; i >= 0; i--) {
-            down(i);
-        }
-    }
+    static class MaxHeap {
+        public int[] nums;
+        public int size;
 
-    public void down(int parent) {
-        int left = parent * 2 + 1;
-        int right = left + 1;
-        int max = parent;
-        if (left < size && nums[left] > nums[max]) {
-            max = left;
+        public MaxHeap(int[] nums) {
+            this.nums = nums;
+            this.size = nums.length;
+            buildHeap();
         }
-        if (right < size && nums[right] > nums[max]) {
-            max = right;
-        }
-        if (max != parent) {
-            swap(max, parent);
-            down(max);
-        }
-    }
-    
-    public int poll(){
-        int top = nums[0];
-        swap(0, size - 1);
-        size--;
-        down(0);
-        return top;
-    }
 
-    public void swap(int p, int q) {
-        int t = nums[p];
-        nums[p] = nums[q];
-        nums[q] = t;
+        public int poll() {
+            int peek = nums[0];
+            swap(0, size - 1);
+            size--;
+            down(0);
+            return peek;
+        }
+
+        private void buildHeap() {
+            for (int i = size / 2 - 1; i >= 0; i--) {
+                down(i);
+            }
+        }
+
+        private void down(int parent) {
+            int left = 2 * parent + 1;
+            int right = left + 1;
+            int max = parent;
+            if (left < size && nums[left] > nums[max]) {
+                max = left;
+            }
+            if (right < size && nums[right] > nums[max]) {
+                max = right;
+            }
+            if (max != parent) {
+                swap(max, parent);
+                down(max);
+            }
+        }
+
+        private void swap(int i, int j) {
+            int temp = nums[i];
+            nums[i] = nums[j];
+            nums[j] = temp;
+        }
     }
 }
 ```
@@ -75,60 +75,61 @@ class MaxHeap {
 # 手小顶堆n：弹出n-k个
 
 ```java
+// 215. 数组中的第K个最大元素
 class Solution {
     public int findKthLargest(int[] nums, int k) {
-        MinHeap minHeap = new MinHeap(nums);
-        for(int i = 0; i < nums.length - k; i++){
-            minHeap.poll();
+        MinHeap heap = new MinHeap(nums);
+        for (int i = 0; i < nums.length - k; i++) {
+            heap.poll();
         }
-        return minHeap.nums[0];
-    }
-}
-
-class MinHeap {
-    public int[] nums;
-    public int size;
-
-    public MinHeap(int[] nums) {
-        this.nums = nums;
-        size = nums.length;
-        buildMinHeap();
+        return heap.nums[0];
     }
 
-    public void buildMinHeap() {
-        for (int i = size / 2 - 1; i >= 0; i--) {
-            up(i);
-        }
-    }
+    static class MinHeap {
+        public int[] nums;
+        public int size;
 
-    public void up(int parent) {
-        int left = parent * 2 + 1;
-        int right = left + 1;
-        int min = parent;
-        if (left < size && nums[left] < nums[min]) {
-            min = left;
+        public MinHeap(int[] nums) {
+            this.nums = nums;
+            this.size = nums.length;
+            buildMinHeap();
         }
-        if (right < size && nums[right] < nums[min]) {
-            min = right;
-        }
-        if (min != parent) {
-            swap(min, parent);
-            up(min);
-        }
-    }
-    
-    public int poll(){
-        int top = nums[0];
-        swap(0, size - 1);
-        size--;
-        up(0);
-        return top;
-    }
 
-    public void swap(int p, int q) {
-        int t = nums[p];
-        nums[p] = nums[q];
-        nums[q] = t;
+        public int poll() {
+            int peek = nums[0];
+            swap(0, size - 1);
+            size--;
+            down(0);
+            return peek;
+        }
+
+        private void buildMinHeap() {
+            for (int i = size / 2 - 1; i >= 0; i--) {
+                down(i);
+            }
+        }
+
+        private void down(int parent) {
+            int left = 2 * parent + 1;
+            int right = left + 1;
+            int min = parent;
+            if (left < size && nums[left] < nums[min]) {
+                min = left;
+            }
+            if (right < size && nums[right] < nums[min]) {
+                min = right;
+            }
+            if (min != parent) {
+                swap(min, parent);
+                down(min);
+            }
+        }
+
+        private void swap(int i, int j) {
+            int temp = nums[i];
+            nums[i] = nums[j];
+            nums[j] = temp;
+        }
     }
 }
 ```
@@ -137,71 +138,69 @@ class MinHeap {
 
 时间复杂度更低：nlogk
 
-- k个元素的小顶堆。
-- 如果大于堆顶，替换堆顶重新下潜（堆大小不变）。
+- 先建立k个元素的小顶堆。
+- 后面的元素，如果大于堆顶，替换堆顶重新下潜（堆大小不变）。
 - 堆顶即topK。
 
 ```java
 // 215. 数组中的第K个最大元素
 class Solution {
     public int findKthLargest(int[] nums, int k) {
-        MinHeap minHeap = new MinHeap(nums);
-        minHeap.size = k;
-        minHeap.buildMinHeap();
+        MinHeap heap = new MinHeap(nums, k);
         for(int i = k; i < nums.length; i++){
-            if(minHeap.nums[0] < nums[i]){
-                minHeap.nums[0] = nums[i];
-                minHeap.up(0);
+            if(nums[i] > heap.nums[0]){
+                heap.nums[0] = nums[i];
+                heap.down(0);
             }
         }
-        return minHeap.nums[0];
-    }
-}
-
-class MinHeap {
-    public int[] nums;
-    public int size;
-
-    public MinHeap(int[] nums) {
-        this.nums = nums;
-        size = nums.length;
-        buildMinHeap();
+        return heap.nums[0];
     }
 
-    public void buildMinHeap() {
-        for (int i = size / 2 - 1; i >= 0; i--) {
-            up(i);
+    static class MinHeap {
+        public int[] nums;
+        public int size;
+
+        public MinHeap(int[] nums, int size) {
+            this.nums = nums;
+            this.size = size;
+            buildMinHeap();
         }
-    }
 
-    public void up(int parent) {
-        int left = parent * 2 + 1;
-        int right = left + 1;
-        int min = parent;
-        if (left < size && nums[left] < nums[min]) {
-            min = left;
+        public int poll() {
+            int peek = nums[0];
+            swap(0, size - 1);
+            size--;
+            down(0);
+            return peek;
         }
-        if (right < size && nums[right] < nums[min]) {
-            min = right;
-        }
-        if (min != parent) {
-            swap(min, parent);
-            up(min);
-        }
-    }
-    
-    public int poll(){
-        int top = nums[0];
-        swap(0, size - 1);
-        size--;
-        up(0);
-        return top;
-    }
 
-    public void swap(int p, int q) {
-        int t = nums[p];
-        nums[p] = nums[q];
-        nums[q] = t;
+        private void buildMinHeap() {
+            for (int i = size / 2 - 1; i >= 0; i--) {
+                down(i);
+            }
+        }
+
+        private void down(int parent) {
+            int left = 2 * parent + 1;
+            int right = left + 1;
+            int min = parent;
+            if (left < size && nums[left] < nums[min]) {
+                min = left;
+            }
+            if (right < size && nums[right] < nums[min]) {
+                min = right;
+            }
+            if (min != parent) {
+                swap(min, parent);
+                down(min);
+            }
+        }
+
+        private void swap(int i, int j) {
+            int temp = nums[i];
+            nums[i] = nums[j];
+            nums[j] = temp;
+        }
     }
 }
 ```
