--- a/docs/基础/排序/排序.md
+++ b/docs/基础/排序/排序.md
@@ -18,6 +18,12 @@ public void swap(int[] nums, int i, int j) {
     nums[j] = nums[i] ^ nums[j];
     nums[i] = nums[i] ^ nums[j];
 }
+
+private void swap(int[] nums, int i, int j){
+    int temp = nums[i];
+    nums[i] = nums[j];
+    nums[j] = temp;
+}
 ```
 
 
