--- a/docs/基础/树/计算题.md
+++ b/docs/基础/树/计算题.md
@@ -1,16 +1,16 @@
-二叉树，第n层最多有2^(n-1)个
+二叉树，第n层最多有$2^{n-1}$个
 
-深度为 k 的二叉树至多有 2^k-1个结点
+层数为 k 的二叉树至多有 $2^k-1$个结点
 
 层数=深度（该路径经过的节点），高度=层数-1。
 
-​	高度（树的高度是指根到叶子节点的最长路径的边数，根的高度为0），**一楼不能算高楼**
+​	高度（树的高度是指根到叶子节点的最长路径的**边数**，根的高度为0），**一楼不能算高楼**
 
 
 
-若一颗**完全二叉树**中某节点无左孩子，则该节点是叶子节点（根节点也是叶子节点）
+完全二叉树可以看做是满二叉树的删减，**最底层节点靠左填充，其他层节点全被填满**。完全二叉树的生成遵从从左往右，从上到下的顺序。
 
-​	完全二叉树可以看做是满二叉树的删减。完全二叉树的生成遵从从左往右，从上到下的顺序。
+​	若一颗**完全二叉树**中某节点无左孩子，则该节点是叶子节点（根节点也是叶子节点）
 
 ​	一棵完全二叉树某节点如果没有左孩子，则一定不会有右孩子，那这个节点一定是个叶子结点。
 
@@ -18,13 +18,19 @@
 
 一棵完全二叉树共有54711个节点，则它有多少个叶子节点？
 
-​	$2^{15}-1 <= 54711 <= 2^{16}-1$，则有16层。
+​	假设完全二叉树的节点数量为 𝑛 ，则叶节点数量为 (𝑛+1)/2  向下整除，非叶节点数量为 (𝑛−1)/2 向下整除。
 
-​	最后一层的节点有，总节点数减去前15层节点数，$54711-(2^{16-1}-1)=21944$
+​	推导过程：
 
-​	最后一层的空缺节点，$2^{16-1}-21944=10824$，上推叶子节点为5412
+​	$2^{15}-1 < 54711 <= 2^{16}-1$，则有16层。
 
-​	共21944 + 5412 = 27356
+​	最后一层的节点有，总节点数减去前15层节点数，$54711-(2^{15}-1)=21944$, 记为$x=n-(2^{h-1}-1)$
+
+​	最后一层的空缺节点，$2^{16-1}-21944=10824$，上推叶子节点为$10824 / 2 = 5412$, 记为$y = \dfrac{2^{h-1}-x}{2}$
+
+​	共21944 + 5412 = 27356。即$ans = x + y = x + \dfrac{2^{h-1}-x}{2} = \dfrac{n+1}{2}$
+
+​	
 
 
 
@@ -34,11 +40,15 @@
 
 
 
-**二叉排序树**的中序遍历一定有序
-
 不同的二叉搜索树有几个？Catalan数，  [Catalan数.md](..\动态规划\Catalan数.md) 
 
+**二叉排序树**的中序遍历是升序，我们在二叉搜索树中获取有序数据仅需 𝑂(𝑛) 时间。
 
+二叉搜索树的查找操作与二分查找算法的工作原理一致，都是每轮排除一半情况。循环次数最多为二叉树的层数，当二叉树平衡时，使用 𝑂(log⁡𝑛) 时间
+
+12个元素的排序数组进行二分查找，每个元素被查找的概率是相等的，则平均比较次数是？37/12
+
+​	$查找次数/元素个数=1*1+2*2+3*4+4*5$。画一个二叉树，第i层就要比较ici
 
 
 
