--- a/docs/基础/二分查找.md
+++ b/docs/基础/二分查找.md
@@ -2,7 +2,7 @@
 
 首先，要求数组有序。
 
-**target < a[m] < target，target在两边**。
+**target < nums[m] < target，target在中间元素nums[m]的两边**。
 
 1. 基础版和改动版：区别就是**左闭右闭**、左闭右开。
 
@@ -53,6 +53,8 @@ class Solution {
     }
 }
 ```
+
+插入位置为 `i`: 二分结束时一定有，i 指向首个大于 `target` 的元素，j 指向首个小于 `target` 的元素。
 
 ### Leftmost 与 Rightmost的-1版本
 
@@ -106,7 +108,7 @@ public static int binarySearchRightmost(int[] a, int target) {
     return candidate;
 }
 ```
-### Leftmost 与 Rightmost 的i/i-1版
+### Leftmost 与 Rightmost 的i/j版
 
 如果没找到，可以返回一个比 -1 更有用的索引。
 
@@ -134,6 +136,7 @@ public static int binarySearchLeftmostUseful(int[] a, int target) {
     }
     return i;   // return j + 1;
 }
+循环完成后，i 指向最左边的 target ，j 指向首个小于 target 的元素。
 
 public static int binarySearchRightmostUseful(int[] a, int target) {
     int i = 0, j = a.length - 1;
@@ -145,19 +148,20 @@ public static int binarySearchRightmostUseful(int[] a, int target) {
             i = m + 1;
         }
     }
-    return i - 1;
+    return j;	// return i - 1;
 }
+循环完成后，i 指向首个大于 target 的元素 ，j 指向最右边的 target。
 ```
 
 > 四种互相转化
 
-`>=` 是 leftmost
+`>= x`  是 leftmost(x)
 
-`>` 是 `>= x+1`
+`> x` 是 `>= x+1`
 
-`<` 是 `(>=x) - 1`
+`< x` 是 `(>=x) - 1`
 
-`<=` 是 `(>x) - 1` 即 `(>= x+1) -1`
+`<= x`  是 rightmost(x), 也是`(>x) - 1` 即 `(>= x+1) -1`
 
 ### 递归版
 
@@ -223,8 +227,8 @@ class Solution {
     }
 }
 ```
-### 第一个错误的版本
-leftmost -1版
+### leftmost -1版
+
 ```java
 // 278. 第一个错误的版本
 public class Solution extends VersionControl {
@@ -245,10 +249,9 @@ public class Solution extends VersionControl {
 }
 ```
 
-### 在排序数组中查找元素的第一个和最后一个位置
-
-leftmost rightmost -1版
+### leftmost rightmost -1版
 ```java
+// 34. 在排序数组中查找元素的第一个和最后一个位置
 class Solution {
     public int[] searchRange(int[] nums, int target) {
         return new int[] { leftmost(nums, target), rightmost(nums, target) };
@@ -289,15 +292,20 @@ class Solution {
     }
 }
 ```
-只用leftmost实现
+
+### leftmost i rightmost j
+
+
 ```java
+// 只用leftmost实现
+// 34. 在排序数组中查找元素的第一个和最后一个位置
 class Solution {
     public int[] searchRange(int[] nums, int target) {
         int left = leftmost(nums, target);
-        if(left == nums.length || nums[left] != target){
+        if(left == nums.length || nums[left] != target){	// 找到的不是，或者超过最大。注意前后顺序
             return new int[]{-1, -1};
         }
-        return new int[] {left, leftmost(nums, target + 1) -1};
+        return new int[] {left, leftmost(nums, target + 1) -1};	// rightmost(i) = leftmost(i+1) - 1
     }
 
     public static int leftmost(int[] nums, int target) {
@@ -317,6 +325,28 @@ class Solution {
 }
 ```
 
-### leftmost i
+```java
+class Solution {
+    public int[] searchRange(int[] nums, int target) {
+        int right = rightmost(nums, target);
+        if (right == -1 || nums[right] != target) {
+            return new int[] { -1, -1 };
+        }
+        return new int[] { rightmost(nums, target - 1) + 1, right };
+    }
 
-可用 34 题测试
+    public int rightmost(int[] nums, int target) {
+        int i = 0, j = nums.length - 1;
+        while (i <= j) {
+            int m = (i + j) >>> 1;
+            if (target < nums[m]) {
+                j = m - 1;
+            } else {
+                i = m + 1;
+            }
+        }
+        return j;
+    }
+}
+```
+
