--- a/docs/基础/排序/01_冒泡.md
+++ b/docs/基础/排序/01_冒泡.md
@@ -6,6 +6,8 @@
 * 每轮冒泡不断地比较**相邻**的两个元素，如果它们是逆序的，则交换它们的位置
 * 下一轮冒泡，可以调整未排序的右边界，减少不必要比较
 
+![冒泡排序流程](https://www.hello-algo.com/chapter_sorting/bubble_sort.assets/bubble_sort_overview.png)
+
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406201437403.png)
 ```java
 // 912. 排序数组
@@ -49,8 +51,8 @@ public void sort(int[] nums, int i) {
 ```
 ## 改进版：记录待排序数组边界
 
-- 用`x`记录最后一次交换的位置 `j`，每轮结束 [0...j]是待排序部分, [j+1, n-1]是已排序（最后一次交换后，只是j+1一定是大的，j还可能比之前的小）
-- 让下一轮的 `i = x`。
+- 用`x`记录最后一次交换的位置 `j`，每轮结束`[0...j]`是待排序部分, `[j+1, n-1]`是已排序（最后一次交换后，只是j+1一定是大的，j还可能比之前的小）
+- 让下一轮的 `i = x` （`[0...i]`是待排序部分）
 
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406201437851.png)
 ```java
@@ -92,8 +94,8 @@ public void sort(int[] nums, int i) {
 
 ## 时间复杂度
 
-平均O(n logn)
+## 算法特性
 
-最坏 O(n^2)
-
-​	倒序数组，要n轮。
+- **时间复杂度为 $O(n^2)$、自适应排序**：各轮“冒泡”遍历的数组长度依次为 $n - 1$、$n - 2$、$\dots$、$2$、$1$ ，总和为 $(n - 1) n / 2$ 。在引入 `flag` 优化后，最佳时间复杂度可达到 $O(n)$ 。
+- **空间复杂度为 $O(1)$、原地排序**：指针 $i$ 和 $j$ 使用常数大小的额外空间。
+- **稳定排序**：由于在“冒泡”中遇到相等元素不交换。
