--- a/docs/基础/排序/04_快速排序.md
+++ b/docs/基础/排序/04_快速排序.md
@@ -1,11 +1,13 @@
-# 双指针：最能记住的
+## 双指针：最能记住的
 
-待排序数组：[i...j]
+![快速排序流程](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408011331042.png)
+
+待排序数组：`[i...j]`
 
 分区：
 
 ​	第一个选择为哨兵。哨兵右边都是大于等于，左边都是小于等于。
-​	i和j表示空缺位，开始nums[i]是空缺位
+​	i和j表示空缺位，开始`nums[i]`是空缺位
 
 ```java
 // 912. 排序数组
@@ -21,9 +23,9 @@ class Solution {
         if (i >= j) {
             return;
         }
-        int mid = partition(nums, i, j);
-        quickSort(nums, i, mid - 1);
-        quickSort(nums, mid + 1, j);
+        int pivot = partition(nums, i, j);
+        quickSort(nums, i, pivot - 1);
+        quickSort(nums, pivot + 1, j);
     }
 
     public int partition(int[] nums, int i, int j) {
@@ -49,7 +51,7 @@ class Solution {
 }
 ```
 
-# 时间复杂度
+## 时间复杂度
 
 最好、平均：O(n logn)。
 
@@ -59,13 +61,31 @@ class Solution {
 
 ​	倒序数组。那么每轮哨兵划分操作都将长度为 k 的数组划分为长度 1 和 k−1 两个子数组。那么轮数是 n
 
-# 其他
 
-## Lomuto
+
+## 算法特性
+
+- **时间复杂度为 $O(n \log n)$、非自适应排序**：
+
+  最好、平均：O(nlogn)。
+
+  ​	在平均情况下，哨兵划分的递归层数为 $\log n$ ，每层中的总循环数为 $n$ ，总体使用 $O(n \log n)$ 时间。
+
+  最坏：O(n^2)
+
+  ​	在最差情况（**当数组中所有元素都相等、已正序、已倒序时**），每轮哨兵划分操作都将长度为 $n$ 的数组划分为长度为 $0$ 和 $n - 1$ 的两个子数组，此时递归层数达到 $n$ ，每层中的循环数为 $n$ ，总体使用 $O(n^2)$ 时间。
+
+- **空间复杂度为 $O(n)$、原地排序**：在最差情况下，达到最差递归深度 $n$ ，使用 $O(n)$ 栈帧空间。排序操作是在原数组上进行的，未借助额外数组。
+
+- **非稳定排序**：在哨兵划分的最后一步，基准数可能会被交换至相等元素的右侧。
+
+## 其他
+
+### Lomuto
 
 [算法学习之：Lomuto 分区算法 + 快速排序算法_lomuto算法-CSDN博客](https://blog.csdn.net/qq_42902997/article/details/115773598)
 
-## 双边 j 先
+### 双边 j 先
 
 * 选择最左侧元素作为基准点
 * j 找比基准点**小于等于**的，i 找比基准点**大于的**，一旦找到，二者进行交换
@@ -94,7 +114,7 @@ public int partition(int[] nums, int left, int right) {
 }
 ```
 
-## 双边 i 先：唯一能通过的912的
+### 双边 i 先：唯一能通过的912的
 
 ```java
 // 双边 i 先
@@ -120,6 +140,6 @@ public int partition(int[] nums, int left, int right) {
 }
 ```
 
-## 随机哨兵
+### 随机哨兵
 
 [「排序算法」快速排序 - 力扣（LeetCode）](https://leetcode.cn/circle/discuss/kiHnKs/)
