--- a/docs/基础/树/计算题.md
+++ b/docs/基础/树/计算题.md
@@ -60,9 +60,4 @@ huffman树还可以，非节点的权值的和
 
 ![image-20240618163320553](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406181633582.png) 
 
-
-
-[如何根据前序和后序来计算中序.md](遍历\如何根据前序和后序来计算中序.md) ：多个中序
-
- [如何根据中序和后序来计算前序.md](遍历\如何根据中序和后序来计算前序.md) ：只有一个结果
-
+ [两种遍历来推树.md](遍历\两种遍历来推树.md) 
