--- a/docs/基础/递归/递归.md
+++ b/docs/基础/递归/递归.md
@@ -227,9 +227,39 @@ for循环展开看
 
 ## 回溯
 
-标准模板：void dfs
+模板：void dfs
+
 - 用栈保存符合的链路结果。
 - 保存结果处、剪枝处、正向操作-递归-反向操作处。
+
+```java
+/* 回溯算法框架
+ * 状态 state 是直至目前已被选择的元素。
+ * 候选集合 choices 是输入数组中的所有元素
+ * 结果 res
+ */
+void backtrack(State state, List<Choice> choices, List<State> res) {
+    // 判断是否为解
+    if (isSolution(state)) {
+        // 记录解
+        recordSolution(state, res);
+        // 不再继续搜索
+        return;
+    }
+    // 遍历所有选择
+    for (Choice choice : choices) {
+        // 剪枝：判断选择是否合法
+        if (isValid(state, choice)) {
+            // 尝试：做出选择，更新状态
+            makeChoice(state, choice);
+            backtrack(state, choices, res);
+            // 回退：撤销选择，恢复到之前的状态
+            undoChoice(state, choice);
+        }
+    }
+}
+```
+
 ```java
 class Solution {
     // ！！！！！！！！！！栈、结果的定义一定要写在dfs外面
@@ -249,7 +279,7 @@ class Solution {
     }
 
     public void dfs() {
-        // 保存结果处
+        // 判断是否为解
         if (stack.size() == nums.length) {
             result.add(new ArrayList<>(stack));
             return;
