--- a/docs/基础/排序/排序.md
+++ b/docs/基础/排序/排序.md
@@ -1,16 +1,3 @@
-- 
-- [3. 堆排序](#3-堆排序)
-- [4. 插入排序](#4-插入排序)
-- [5. 希尔排序](#5-希尔排序)
-- [6. 归并排序](#6-归并排序)
-  - [6.1. 递归：自顶向下](#61-递归自顶向下)
-  - [6.2. 非递归实现：自底向上](#62-非递归实现自底向上)
-  - [6.3. 递归实现+元素少时插入排序](#63-递归实现元素少时插入排序)
-- [7. 快速排序](#7-快速排序)
-
-
----
-
 ```java
 public void swap(int[] nums, int i, int j) {
     if(i == j) return;
@@ -26,207 +13,79 @@ private void swap(int[] nums, int i, int j){
 }
 ```
 
+## 排序速记
+
+冒泡：j和j+1比较，把最大的移到未排序的末尾。
+
+选择：每轮从未排序选出最小的，放到已排序的末尾。
+
+插入：每轮从未排序“随机”选一个，放到已排序中。
 
 
 
+快速：两个哨兵。
 
-## 5. 希尔排序
+归并：先划分两个mergeSort，再合并merge。
 
-插入排序改进：插入排序如果第一个元素是9，那么它要被移动n次；而希尔排序从大gap往小gap走，移动9的步幅很大，$\log_2 n$就足以。
+堆：先建大顶堆，再出堆。
 
 
-* 根据步幅gap实现分组的插入排序
-* 每轮排序后 gap 逐渐变小，直至 gap 为 1 完成排序 
 
-![alt text](../../../images/image-36.png)
-```java
-public int[] sortArray(int[] nums) {
-    // gap 不断除2，直到1
-    for (int gap = nums.length / 2; gap > 0; gap /= 2) {
-        // 1替换为gap
-        for (int low = gap; low < nums.length; low++) {
-            int t = nums[low];
-            int i = low - gap;
-            while (i >= 0 && nums[i] > t) {
-                nums[i + gap] = nums[i];
-                i -= gap;
-            }
-            if (i != low - gap) {
-                nums[i + gap] = t;
-            }
-        }
-    }
-    return nums;
-}
-```
+桶：桶内排序，输出是把桶连起来就行。
 
-## 6. 归并排序
+计数：选出最大值，计数数组 m + 1。
 
-### 6.1. 递归：自顶向下
+基数：从低位到高位进行计数排序，基数作计数。
 
-```
-[5,1,1,2,0,0]
-[5,1,1] [2,0,0]     // 而自底向上是 [5,1] [1,2] [0,0]
-[5,1] [1] [2,0] [0]
-[5] [1] [1] [2] [0] [0]
-```
-```java
-public int[] sortArray(int[] nums) {
-    int[] t_arr = new int[nums.length];
-    split(nums, 0, nums.length - 1, t_arr);
-    return nums;
-}
+| 算法 |    最好    |    最坏    |    平均    |  空间   | 稳定 | 思想 |          注意事项          |      速度      |         优化          |
+| :--: | :--------: | :--------: | :--------: | :-----: | :--: | :--: | :------------------------: | :------------: | :-------------------: |
+| 冒泡 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  原地   |  Y   |      |  最好需要优化 + 已经有序   |      超时      | x记录最后一次交换位置 |
+| 选择 |  O($n^2$)  |  O($n^2$)  |  O($n^2$)  |  原地   |  N   |      |    交换次数一般少于冒泡    |      超时      |                       |
+|  堆  | O($nlogn$) | O($nlogn$) | O($nlogn$) |  原地   |  N   |      |                            |       快       |      非递归下潜       |
+| 插入 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  原地   |  Y   |      |       最好是已经有序       |      巨慢      |   优化就是希尔排序    |
+| 希尔 |  O(nlogn)  |  O($n^2$)  | O($nlogn$) |  原地   |  N   |      |                            |  比堆排序还快  |                       |
+| 归并 | O($nlogn$) | O($nlogn$) | O($nlogn$) |  O(n)   |  Y   |      |       额外的O(n)空间       | 比希尔排序还快 |                       |
+| 快速 | O($nlogn$) |  O($n^2$)  | O($nlogn$) | O(logn) |  N   |      | 枢轴值随机化来缓解最坏情况 |      巨慢      |                       |
 
-public void split(int[] nums, int left, int right, int[] t_arr) {
-    if (left == right) {
-        return;
-    }
-    // 分
-    int m = (left + right) >>> 1;
-    split(nums, left, m, t_arr);
-    split(nums, m + 1, right, t_arr);
-    // 并：结果存到临时数组里
-    merge(nums, left, m, m + 1, right, t_arr);
-    // 将临时数组里的结果拷回原数组
-    System.arraycopy(t_arr, left, nums, left, right - left + 1);
-}
 
-public void merge(int[] nums, int iLeft, int iRight, int jLeft, int jRight, int[] t_arr) {
-    int k = iLeft;  // 0在递归中可以，但为了和非递归保持一致。
-    while (iLeft <= iRight && jLeft <= jRight) {
-        if (nums[iLeft] < nums[jLeft]) {
-            t_arr[k] = nums[iLeft];
-            iLeft++;
-        } else {
-            t_arr[k] = nums[jLeft];
-            jLeft++;
-        }
-        k++;
-    }
-    if (iLeft <= iRight) {
-        System.arraycopy(nums, iLeft, t_arr, k, iRight - iLeft + 1);
-    } else {
-        System.arraycopy(nums, jLeft, t_arr, k, jRight - jLeft + 1);
-    }
-}
-```
 
-### 6.2. 非递归实现：自底向上
+## 图
 
-```
-[5,1,1,2,0,0]
-[5,1] [1,2] [0,0]   
-[5,1,1,2] [0,0]     // 而自顶向下是 [5,1,1] [2,0,0]
-[5,1,1,2,0,0]   
-```
-```java
-public int[] sortArray(int[] nums) {
-    int[] t_arr = new int[nums.length];
-    split(nums, t_arr);
-    return nums;
-}
+![排序算法对比](https://www.hello-algo.com/chapter_sorting/summary.assets/sorting_algorithms_comparison.png)
 
-public void split(int[] nums, int[] t_arr) {
-    int length = nums.length;
-    // 宽度2，不断膨胀，直到一半能完全盖住数组前（要让左右还有的比较，不能让左边取完数组）
-    for (int width = 2; width / 2 < length; width *= 2) {
-        for (int left = 0; left < length; left += width) {
-            int right = left + width - 1;
-            int m = Math.min((left + right) >>> 1, length - 1);
-            right = Math.min(right, length - 1);
-            merge(nums, left, m, m + 1, right, t_arr);
-        }
-        System.arraycopy(t_arr, 0, nums, 0, length);
-    }
-}
+**稳定性**：稳定排序在完成排序后，相等元素在数组中的相对顺序不发生改变。
 
-public void merge(int[] nums, int iLeft, int iRight, int jLeft, int jRight, int[] t_arr) {
-    int k = iLeft;
-    while (iLeft <= iRight && jLeft <= jRight) {
-        if (nums[iLeft] < nums[jLeft]) {
-            t_arr[k] = nums[iLeft];
-            iLeft++;
-        } else {
-            t_arr[k] = nums[jLeft];
-            jLeft++;
-        }
-        k++;
-    }
-    if (iLeft <= iRight) {
-        System.arraycopy(nums, iLeft, t_arr, k, iRight - iLeft + 1);
-    } else {
-        System.arraycopy(nums, jLeft, t_arr, k, jRight - jLeft + 1);
-    }
-}
-```
+**自适应性**：自适应排序能够利用输入数据已有的顺序信息来减少计算量，达到更优的时间效率。自适应排序算法的最佳时间复杂度通常优于平均时间复杂度。
 
-### 6.3. 递归实现+元素少时插入排序
+**是否基于比较**：基于比较的排序依赖比较运算符（<、=、>）来判断元素的相对顺序，从而排序整个数组，理论最优时间复杂度为 O(nlog⁡n) 。而非比较排序不使用比较运算符，时间复杂度可达 O(n) ，但其通用性相对较差。
 
-元素少时插入排序，是在分裂中，而不是一开始判断数组用归并还是分裂。
+## 稳定和不稳定
 
-```java
-class Solution {
-    public int[] sortArray(int[] nums) {
-        int[] t_arr = new int[nums.length];
-        split(nums, 0, nums.length - 1, t_arr);
-        return nums;
-    }
+稳定
 
-    public void insertion(int[] nums, int left, int right){
-        for(int low = left + 1; low <= right; low++){
-            int t = nums[low];
-            int i = low - 1;
-            while(i >= left && nums[i] > t){
-                nums[i + 1] = nums[i];
-                i--;
-            }
-            if(i != low -1){
-                nums[i + 1] = t;
-            }
-        }
-    }
+​	冒泡排序、插入排序；归并排序；桶计数基数排序
 
-    public void split(int[] nums, int left, int right, int[] t_arr) {
-        if (left == right) {
-            return;
-        }
-        else if (right - left <= 32) {
-            insertion(nums, left, right);
-            return;
-        }
-        // 分
-        int m = (left + right) >>> 1;
-        split(nums, left, m, t_arr);
-        split(nums, m + 1, right, t_arr);
-        // 并：结果存到临时数组里
-        merge(nums, left, m, m + 1, right, t_arr);
-        // 将临时数组里的结果拷回原数组
-        System.arraycopy(t_arr, left, nums, left, right - left + 1);
-    }
+不稳定
 
-    public void merge(int[] nums, int iLeft, int iRight, int jLeft, int jRight, int[] t_arr) {
-        int k = iLeft;
-        while (iLeft <= iRight && jLeft <= jRight) {
-            if (nums[iLeft] < nums[jLeft]) {
-                t_arr[k] = nums[iLeft];
-                iLeft++;
-            } else {
-                t_arr[k] = nums[jLeft];
-                jLeft++;
-            }
-            k++;
-        }
-        if (iLeft <= iRight) {
-            System.arraycopy(nums, iLeft, t_arr, k, iRight - iLeft + 1);
-        } else {
-            System.arraycopy(nums, jLeft, t_arr, k, jRight - jLeft + 1);
-        }
-    }
+​	选择排序（221）、希尔排序；快速排序（）、堆排序（左右乱）
 
-    public void swap(int[] nums, int i, int j) {
-        nums[i] = nums[i] ^ nums[j];
-        nums[j] = nums[i] ^ nums[j];
-        nums[i] = nums[i] ^ nums[j];
-    }
-}
-```
+## 时间复杂度
+
+> 最坏、最好、平均一样：步骤是死的
+
+​	选择O(n2)；归并O(nlogn)、堆O(nlogn)；计数O(n+m)、基数O(nk)
+
+
+
+> 最好不一样
+
+冒泡：最好情况是**优化版本** O(n)，当数组已排序，则一轮就结束。
+
+插入：最好情况是 O(n)
+
+> 最坏不一样
+
+快速排序：最差时间复杂度 O(n2)，当数组中所有元素都相等、已正序、已倒序
+
+桶排序：最差时间复杂度 O(n2) ，所有元素被分至同一个桶中
+
