--- a/docs/基础/数/排列组合.md
+++ b/docs/基础/数/排列组合.md
@@ -357,3 +357,52 @@ class Solution {
     }
 }
 ```
+
+
+
+
+
+---
+
+# other
+
+[13.2  全排列问题 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_backtracking/permutations_problem/#2_1)
+
+全排列之考虑相等元素的情况
+
+```java
+/* 回溯算法：全排列 II */
+void backtrack(List<Integer> state, int[] choices, boolean[] selected, List<List<Integer>> res) {
+    // 当状态长度等于元素数量时，记录解
+    if (state.size() == choices.length) {
+        res.add(new ArrayList<Integer>(state));
+        return;
+    }
+    // 遍历所有选择
+    Set<Integer> duplicated = new HashSet<Integer>();
+    for (int i = 0; i < choices.length; i++) {
+        int choice = choices[i];
+        // 剪枝：不允许重复选择元素 且 不允许重复选择相等元素
+        if (!selected[i] && !duplicated.contains(choice)) {
+            // 尝试：做出选择，更新状态
+            duplicated.add(choice); // 记录选择过的元素值
+            selected[i] = true;
+            state.add(choice);
+            // 进行下一轮选择
+            backtrack(state, choices, selected, res);
+            // 回退：撤销选择，恢复到之前的状态
+            selected[i] = false;
+            state.remove(state.size() - 1);
+        }
+    }
+}
+
+/* 全排列 II */
+List<List<Integer>> permutationsII(int[] nums) {
+    List<List<Integer>> res = new ArrayList<List<Integer>>();
+    backtrack(new ArrayList<Integer>(), nums, new boolean[nums.length], res);
+    return res;
+}
+```
+
+HashSet是每个dfs中的新生的，范围是choices。直观来说，是管理每个父节点下的子节点，使其不重复。
