--- a/docs/基础/树/计算题.md
+++ b/docs/基础/树/计算题.md
@@ -56,8 +56,35 @@
 
 ![image-20240618163235546](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406181632608.png)
 
-huffman树还可以，非节点的权值的和
+huffman树还可以，非叶子节点的权值的和
 
-![image-20240618163320553](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406181633582.png) 
+![image-20240618163320553](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406181633582.png)
+
+
+
+
 
  [两种遍历来推树.md](遍历\两种遍历来推树.md) 
+
+
+
+## 任一二叉树n0=n2+1
+
+对于任一二叉树，若度为2的结点有n2个，则叶子结点数必为n2+1
+
+证明：	
+
+​	假设该二叉树总共有n个结点，则该二叉树总共会有n-1条边。
+
+​	n=n0+n1+n2。
+
+​	度为2的结点会延伸出两条边，度为1的结点会延伸出一条边。则可列公式：n-1 = 2n2 + n1 ，
+
+​	综上：n0 + n1 + n2  - 1 = 2n2 + n1，则计算可知 n0=n2+1。
+
+
+
+> 哈夫曼树一共有 215个节点，进行编码，最多可以编码多少个字符？
+>
+> 即求叶子节点的数量，n0 = n2 + 1，n = n0 + 0 + n2 ，则108 
+
