--- a/docs/基础/树/遍历/两种遍历来推树.md
+++ b/docs/基础/树/遍历/两种遍历来推树.md
@@ -2,6 +2,9 @@
 
 前序 + 后序：多个结果
 
+- 前序的第一个节点为根
+- 后序的最后一个节点为根
+
 ## 中序 + 前序/后序
 
 思路和代码: [12.3  构建树问题 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_divide_and_conquer/build_binary_tree_problem/#3)
@@ -49,6 +52,20 @@ TreeNode buildTree(int[] preorder, int[] inorder) {
 
 得到 前 abdcefg
 
+（1）a根，b左孩子，defcg右子树，d右孩子
+
+（2）左：无
+
+​	  右：d根，左无，efcg右子树，c右孩子
+
+（3）左：无
+
+​	右：c根，ef左子树，e根，g右孩子
+
+（4）左：e根，左无，右孩子f。
+
+​	右：wu
+
 ```
   a
 b   d
@@ -67,7 +84,7 @@ b   d
 1、前序的第一个节点为根，即：1；
 2、在中序中找到根节点的位置，划分左右子树（根节点左边的是左子树，根节点右边的是右子树），即2，3，4都是右子树；
 
-3、现已确定根节点位置，再借助递归的思想分别求出其他节点位置。即：将根节点从原先序列中去掉，则前序序列｛2，3，4｝，中序序列｛2，3，4｝，再次利用步骤1、2做法，2为根节点，3，4是其右子树，这样确定下来2的位置；递归下去，确定所有树中节点位置。然后便可求得其后序序列｛4，3，2，1｝，与题目符合，A正确。
+3、现已确定根节点位置，再借助递归的思想分别求出其他节点位置。即：将根节点从原前序序列中去掉，则前序序列｛2，3，4｝，中序序列｛2，3，4｝，再次利用步骤1、2做法，2为根节点，3，4是其右子树，这样确定下来2的位置；递归下去，确定所有树中节点位置。然后便可求得其后序序列｛4，3，2，1｝，与题目符合，A正确。
 
 ```
 (A)
