--- a/docs/题/leetcode/37. 解数独.md
+++ b/docs/题/leetcode/37. 解数独.md
@@ -1,3 +1,8 @@
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406211824045.png)
+
+行、列、整个board的9个9宫格：表示vis。
+- 每个内都是9个数的数组，数组中下标1元素为true表示已经有0了。
+
 ```java
 // 37. 解数独
 class Solution {
