--- a/docs/基础/数/排列组合.md
+++ b/docs/基础/数/排列组合.md
@@ -1,15 +1,9 @@
-- [总结](#总结)
-- [不剪枝](#不剪枝)
-- [46. 全排列](#46-全排列)
-- [47. 全排列 II](#47-全排列-ii)
-- [77. 组合](#77-组合)
-- [39. 组合总和](#39-组合总和)
-- [40. 组合总和 II](#40-组合总和-ii)
-- [216. 组合总和 III](#216-组合总和-iii)
+[toc]
+## 总结（老东西，方案二）
 
----
+[13.2  全排列问题 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_backtracking/permutations_problem/#2_1)
 
-## 总结
+
 
 - 不剪枝；全排列 (vis)；组合和组合总和 (sort后放入更大)；
 - 组合 (剩余个数)；组合总和 (target)
@@ -53,6 +47,7 @@ class Solution {
     }
 
     public void dfs() {
+        // 已完成要求
         if (stack.size() == nums.length) {
             // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
             result.add(new ArrayList<>(stack));
@@ -72,70 +67,115 @@ class Solution {
 // [[1,1,1],[2,1,1],[3,1,1],[1,2,1],[2,2,1],[3,2,1],[1,3,1],[2,3,1],[3,3,1],[1,1,2],[2,1,2],[3,1,2],[1,2,2],[2,2,2],[3,2,2],[1,3,2],[2,3,2],[3,3,2],[1,1,3],[2,1,3],[3,1,3],[1,2,3],[2,2,3],[3,2,3],[1,3,3],[2,3,3],[3,3,3]]
 ```
 
+## 全排列
 
-## 46. 全排列
-剪枝
+共性：
+
 - 已遍历vis
+
+### 全排列：无重复
+
 ```java
 // leetcode 46
-// 回溯 + 剪枝
 class Solution {
-    // 保存每条从根到叶子的链路
-    LinkedList<Integer> stack = new LinkedList<>();
     int[] nums;
-    // 所有的链路
-    List<List<Integer>> result = new ArrayList<>();
-    // 剪枝：已遍历的节点
-    boolean[] vis;
-
+    List<Integer> stack = new ArrayList<>();	// 保存每条从根到叶子的链路
+    List<List<Integer>> res = new ArrayList<>();	// 所有的链路
+    boolean[] vis;	// 剪枝：已遍历的节点
 
     public List<List<Integer>> permute(int[] nums) {
-        vis = new boolean[nums.length];
+        this.vis = new boolean[nums.length];
         this.nums = nums;
         dfs();
-        return result;
+        return res;
     }
 
     public void dfs() {
         if (stack.size() == nums.length) {
             // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
-            result.add(new ArrayList<>(stack));
+            res.add(new ArrayList<>(stack));
             return;
         }
 
         for (int i = 0; i < nums.length; i++) {
-            if(vis[i]){
+            if (vis[i]) {
                 continue;
             }
             // 正向操作：放入、标记已遍历
-            stack.push(nums[i]);
+            stack.add(nums[i]);
             vis[i] = true;
             dfs();
             // 反向操作：拿出、取消标记
             vis[i] = false;
-            stack.pop();
+            stack.remove(stack.size() - 1);
         }
     }
 }
 // [[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]
 ```
 
-## 47. 全排列 II
-剪枝
-- 已遍历vis
-- nums逆序重复：排序数组后，剪去逆序的枝叶（第二个1-第一个1-2），只保留顺序的枝叶（第一个1-第二个1-2）：如果前一个重复元素已经访问过了，那说明是顺序下的新解；没访问过，说明是逆序的老解。
+### 全排列：有重复
+
+> 方案一：每轮（横着看的每一层）的hashset
+>
+> HashSet是每个dfs中的新生的，范围是choices。直观来说，是管理每个父节点下的子节点，使其不重复。
+>
+> 别看简单，时间复杂度和方案二一样。
+>
+> [13.2  全排列问题 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_backtracking/permutations_problem/#2_1)
+
 ```java
+// 47. 全排列 II
 class Solution {
-    // 保存每条从根到叶子的链路
+    int[] nums;
+    boolean[] vis;
+    List<List<Integer>> res = new ArrayList<>();
+    List<Integer> stack = new ArrayList<>();
+
+    public List<List<Integer>> permuteUnique(int[] nums) {
+        this.nums = nums;
+        this.vis = new boolean[nums.length];
+        dfs();
+        return res;
+    }
+
+    public void dfs() {
+        if (stack.size() == nums.length) {
+            res.add(new ArrayList(stack));
+            return;
+        }
+
+        HashSet<Integer> set = new HashSet<>(); // 仅在每轮使用
+        for (int i = 0; i < nums.length; i++) {
+            if (vis[i] || set.contains(nums[i])) {
+                continue;
+            }
+            set.add(nums[i]);       // 不涉及路径，所以无须回溯
+
+            stack.add(nums[i]);
+            vis[i] = true;
+            dfs();
+            vis[i] = false;
+            stack.remove(stack.size() - 1);
+        }
+    }
+}
+```
+
+> 方案二：nums逆序重复：sort + left == now + !vis[left]
+
+排序数组后，剪去逆序的枝叶（第二个1-第一个1-2），只保留顺序的枝叶（第一个1-第二个1-2）：如果前一个重复元素已经访问过了，那说明是顺序下的新解；没访问过，说明是逆序的老解。
+
+```java
+// 47. 全排列 II
+class Solution {
     LinkedList<Integer> stack = new LinkedList<>();
     int[] nums;
-    // 所有的链路
     List<List<Integer>> result = new ArrayList<>();
-    // 剪枝：已遍历的节点
     boolean[] vis;
 
     public List<List<Integer>> permuteUnique(int[] nums) {
-        vis = new boolean[nums.length];
+        this.vis = new boolean[nums.length];
         this.nums = nums;
         Arrays.sort(this.nums);
         dfs();
@@ -144,77 +184,86 @@ class Solution {
 
     public void dfs() {
         if (stack.size() == nums.length) {
-            // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
             result.add(new ArrayList<>(stack));
             return;
         }
 
         for (int i = 0; i < nums.length; i++) {
-            // 已遍历vis
             if (vis[i])
                 continue;
             // 剪去逆序的枝叶
             if (i > 0 && nums[i] == nums[i - 1] && !vis[i - 1])
                 continue;
 
-            // 正向操作：放入、标记已遍历
             stack.push(nums[i]);
             vis[i] = true;
             dfs();
-            // 反向操作：拿出、取消标记
             vis[i] = false;
             stack.pop();
         }
     }
 }
 ```
+## 组合总和
 
-## 77. 组合
-剪枝
-- 放入更大的数：已包含了已遍历vis
-- 剩余个数不够时
+共性：
+
+- 总和：target
+
+- 不区分顺序`[3,4],[4,3]`：sort + start
+
+
+
+无限重复和有重复：
+
+​	无限重复：既然元素可以重复使用，那么nums中就不会出现重复元素
+
+​	有重复：元素只能使用一次，那么nums中就可以有多个重复的元素
+
+### 组合总和：无限重复 
+
+> 方案一：
+
+ i=start，start = i
+
+[13.3  子集和问题 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_backtracking/subset_sum_problem/#3)
+
 ```java
+// 39. 组合总和
 class Solution {
-    int k;
-    int n;
-    // 保存每条从根到叶子的链路
-    LinkedList<Integer> stack = new LinkedList<>();
-    // 所有的链路
-    List<List<Integer>> result = new ArrayList<>();
+    int[] nums;
+    List<List<Integer>> res = new ArrayList<>();
+    List<Integer> stack = new ArrayList<>();
 
-    public List<List<Integer>> combine(int n, int k) {
-        this.k = k;
-        this.n = n;
-        dfs();
-        return result;
+    public List<List<Integer>> combinationSum(int[] candidates, int target) {
+        Arrays.sort(candidates);
+        this.nums = candidates;
+        dfs(0, target);
+        return res;
     }
 
-    public void dfs() {
-        if (stack.size() == k) {
-            // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
-            result.add(new ArrayList<>(stack));
+    public void dfs(int start, int target) {
+        if (target == 0) {
+            res.add(new ArrayList(stack));
             return;
         }
 
-        int i = 1;
-        if (!stack.isEmpty()) {
-            i = stack.peek() + 1;       // 放入更大的数：包含了已遍历vis的情况
-        }
-        for (; i <= n; i++) {
-            // 剩余个数不够时，剪枝
-            if(k - stack.size() > n - i + 1){
-                break;
+        for (int i = start; i < nums.length; i++) {
+            if (target - nums[i] < 0) {
+                return;
             }
-            stack.push(i);
-            dfs();
-            stack.pop();
+            stack.add(nums[i]);
+            dfs(i, target - nums[i]);	// 下一轮start是大于等于自身。
+            stack.remove(stack.size() - 1);
         }
     }
 }
 ```
-## 39. 组合总和
+
+> sort + stack判断
 
 ```java
+// 39. 组合总和
 class Solution {
     // 保存每条从根到叶子的链路
     LinkedList<Integer> stack = new LinkedList<>();
@@ -255,13 +304,61 @@ class Solution {
 }
 ```
 
-## 40. 组合总和 II
+### 组合总和：有重复
+
+> 方案1：
+>
+> [13.3  子集和问题 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_backtracking/subset_sum_problem/#2_1)
+
+i = start, start = i + 1
+
+i > start && left == now	每个子树的第一个孩子可以用，比如，输入[1,1,2]，就可以[1,1]。
 
 ```java
+// 40. 组合总和 II
 class Solution {
-    // 保存每条从根到叶子的链路
+    int[] nums;
+    List<List<Integer>> res = new ArrayList<>();
+    List<Integer> stack = new ArrayList<>();
+
+    public List<List<Integer>> combinationSum2(int[] candidates, int target) {
+        Arrays.sort(candidates);
+        this.nums = candidates;
+        dfs(0, target);
+        return res;
+    }
+
+    public void dfs(int start, int target) {
+        if (target == 0) {
+            res.add(new ArrayList(stack));
+            return;
+        }
+
+        for (int i = start; i < nums.length; i++) {
+            if (target - nums[i] < 0) {
+                return;
+            }
+            if(i > start && nums[i-1] == nums[i]){
+                continue;					// 1是父，那么子1不行，子2还可以，所以是continue
+            }
+            stack.add(nums[i]);
+            dfs(i + 1, target - nums[i]);	// 下一轮start是大于自身。
+            stack.remove(stack.size() - 1);
+        }
+    }
+}
+```
+
+
+
+
+
+> 方案2：
+
+```java
+// 40. 组合总和 II
+class Solution {
     LinkedList<Integer> stack = new LinkedList<>();
-    // 所有的链路
     List<List<Integer>> result = new ArrayList<>();
     int[] nums;
     boolean[] vis;
@@ -278,7 +375,6 @@ class Solution {
 
     public void dfs() {
         if (target == 0) {
-            // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
             result.add(new ArrayList<>(stack));
             return;
         }
@@ -309,100 +405,9 @@ class Solution {
 }
 ```
 
+## other
 
+ [77. 组合.md](..\..\题\leetcode\77. 组合.md) 
 
-## 216. 组合总和 III
-- 放入更大的数：包含了已遍历vis
-- 剪枝剩余target超了的
-```java
-class Solution {
-    // 保存每条从根到叶子的链路
-    LinkedList<Integer> stack = new LinkedList<>();
-    // 所有的链路
-    List<List<Integer>> result = new ArrayList<>();
-    int k;
-    int n = 9;
-    int target;
+ [216. 组合总和 III.md](..\..\题\leetcode\216. 组合总和 III.md) 
 
-    public List<List<Integer>> combinationSum3(int k, int n) {
-        this.target = n;
-        this.k = k;
-        dfs();
-        return result;
-    }
-
-    public void dfs() {
-        // 个数且target满足
-        if (stack.size() == k && target == 0) {
-            // 注意添加子列表时，直接引用对象会被修改，要clone新对象。
-            result.add(new ArrayList<>(stack));
-            return;
-        }
-        
-        int i = 1;
-        if (!stack.isEmpty()) {
-            i = stack.peek() + 1;       // 放入更大的数：包含了已遍历vis的情况
-        }
-        for (; i <= n; i++) {
-            // 剪枝剩余target超了的
-            if (target - i < 0)
-                break;
-            
-            stack.push(i);
-            target -= i;
-            dfs();
-            target += i;
-            stack.pop();
-        }
-    }
-}
-```
-
-
-
-
-
----
-
-# other
-
-[13.2  全排列问题 - Hello 算法 (hello-algo.com)](https://www.hello-algo.com/chapter_backtracking/permutations_problem/#2_1)
-
-全排列之考虑相等元素的情况
-
-```java
-/* 回溯算法：全排列 II */
-void backtrack(List<Integer> state, int[] choices, boolean[] selected, List<List<Integer>> res) {
-    // 当状态长度等于元素数量时，记录解
-    if (state.size() == choices.length) {
-        res.add(new ArrayList<Integer>(state));
-        return;
-    }
-    // 遍历所有选择
-    Set<Integer> duplicated = new HashSet<Integer>();
-    for (int i = 0; i < choices.length; i++) {
-        int choice = choices[i];
-        // 剪枝：不允许重复选择元素 且 不允许重复选择相等元素
-        if (!selected[i] && !duplicated.contains(choice)) {
-            // 尝试：做出选择，更新状态
-            duplicated.add(choice); // 记录选择过的元素值
-            selected[i] = true;
-            state.add(choice);
-            // 进行下一轮选择
-            backtrack(state, choices, selected, res);
-            // 回退：撤销选择，恢复到之前的状态
-            selected[i] = false;
-            state.remove(state.size() - 1);
-        }
-    }
-}
-
-/* 全排列 II */
-List<List<Integer>> permutationsII(int[] nums) {
-    List<List<Integer>> res = new ArrayList<List<Integer>>();
-    backtrack(new ArrayList<Integer>(), nums, new boolean[nums.length], res);
-    return res;
-}
-```
-
-HashSet是每个dfs中的新生的，范围是choices。直观来说，是管理每个父节点下的子节点，使其不重复。
