--- a/docs/基础/动态规划/322. 零钱兑换.md
+++ b/docs/基础/动态规划/322. 零钱兑换.md
@@ -66,10 +66,13 @@ class Solution {
 ```
 
 ## 动态
+
+硬币无限，**求最少的硬币个数**。
+
 1. 硬币是物品重量，总额是背包大小，硬币个数是物品价值.
 2. 一开始初始化为最大值。每次更新是min物品价值。
 
-![alt text](../../../../../../../../images/image-53.png)
+![alt text](../../../images/image-53.png)
 ```java
 class Solution {
     public int coinChange(int[] coins, int amount) {
