--- a/docs/基础/动态规划/最长公共子串.md
+++ b/docs/基础/动态规划/最长公共子串.md
@@ -1,9 +1,9 @@
 ## 最长公共子串
 
-![alt text](../../../../../../../../images/image-56.png)
+![alt text](../../../images/image-56.png)
 
 ## 最长公共子序列
-![alt text](../../../../../../../../images/image-54.png)
+![alt text](../../../images/image-54.png)
 
 ### LCR 095. 最长公共子序列
 ```java
@@ -55,7 +55,7 @@ class Solution {
 
 ## 300. 最长递增子序列
 
-![alt text](../../../../../../../../images/image-57.png)
+![alt text](../../../images/image-57.png)
 ```java
 class Solution {
     public int lengthOfLIS(int[] nums) {
