--- a/docs/题/leetcode/62. 不同路径.md
+++ b/docs/题/leetcode/62. 不同路径.md
@@ -1,12 +1,16 @@
 
-![alt text](../../../../../../../../images/image-45.png)
+![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408122147522.png)
+
 ```java
+// 62. 不同路径
 class Solution {
     public int uniquePaths(int m, int n) {
         int[][] dp = new int[m][n];
+        // 列
         for (int i = 0; i < m; i++) {
             dp[i][0] = 1;
         }
+        // 行
         for (int j = 0; j < n; j++) {
             dp[0][j] = 1;
         }
@@ -20,13 +24,19 @@ class Solution {
 }
 ```
 ```java
+// 62. 不同路径
 class Solution {
     public int uniquePaths(int m, int n) {
+        // 存行
         int[] dp = new int[n];
+        // 行
         for (int j = 0; j < n; j++) {
             dp[j] = 1;
         }
         for (int i = 1; i < m; i++) {
+            // 第一个只有1种解法
+            dp[0] = 1;
+            // 其余
             for (int j = 1; j < n; j++) {
                 dp[j] = dp[j] + dp[j - 1];
             }
